# family-face-recognition

./: .gitignore  README.md  pyproject.toml  requirements.txt
client/: README.md  app.py  emotions.py  face_tracker.py  gesture_detector.py  requirements.txt  xiaozhi_client.py
client/static/: index.html  tracker.html
doc/: chat_2026-02-21.md
face_recognition/: __init__.py  api.py  detector.py  gesture.py  recognizer.py  train.py
face_recognition/static/: index.html
models/: test_report.json
src/: api.py  detector.py  recognizer.py  train.py  video.py
tests/: test_basic.py  test_recognition.py
